--- a/AnimeHubApi/AnimeHubApi.csproj
+++ b/AnimeHubApi/AnimeHubApi.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Scalar.AspNetCore" Version="2.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\Animes\" />
+  </ItemGroup>
+
   <Import Project="..\AnimeHub.Shared\AnimeHub.Shared.projitems" Label="Shared" />
 
 </Project>
